# CRISP

./: .gitignore  Makefile  README.md  environment.yml  instruct.md  pyproject.toml  requirements.txt
configs/crisp/: default.yaml  solver.yaml
configs/data/: colondb.yaml  cvc_300.yaml  cvc_clinicdb.yaml  etis.yaml  kvasir_seg.yaml  kvasir_test.yaml  local_train_test.yaml  polypgen.yaml  thesis_train_test.yaml
configs/eval/: metrics.yaml
configs/experiment/: taskA_pranet_baseline.yaml  taskA_pranet_crisp.yaml  (+13 more)
docker/: Dockerfile
docs/: audit_report.md  datasets.md  experiments.md  local_mode_report.md  method.md  repo_guide.md  unet_taskA_report.md
scripts/: _thesis_smoke_common.sh  bootstrap_local_workspace.sh  eval_pranet_crossdomain.sh  eval_thesis_pranet.sh  eval_thesis_unet.sh  eval_thesis_unetpp.sh  eval_unet_crossdomain.sh  eval_unet_local.sh  export_tables.sh  train_pranet_baseline.sh  train_pranet_crisp.sh  train_thesis_pranet_baseline.sh  train_thesis_pranet_crisp.sh  train_thesis_unet_baseline.sh  train_thesis_unet_crisp.sh  train_thesis_unetpp_baseline.sh  train_thesis_unetpp_crisp.sh  train_unet_baseline.sh  train_unet_baseline_local.sh  train_unet_crisp.sh  train_unet_crisp_local.sh  verify_data.sh
tests/: test_baseline_adapters.py  test_boundary.py  test_crisp_smoke.py  test_evaluator.py  test_export_tables.py  test_local_data_mode.py  test_losses.py  test_metrics.py  test_model_loading.py  test_projector_head.py  test_solver.py  test_teacher_posterior.py  test_train_script.py  test_trainer.py  test_transforms.py  test_unet_path.py
(+64 files in other folders)
